--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,3 +3,97 @@
     padding: 0;
     font-family: sans-serif;
 }
+header{
+    background-image: url(/images/banner/banner3.png);
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.header-container{
+    color: white;
+    padding: 180px 100px 0 800px;
+}
+.header-container h1{
+    font-size: 45px;
+    margin-bottom: 20px;
+}
+.header-container p{
+    color: rgba(255, 255, 255, 0.795);
+    line-height: 0.6cm;
+}
+
+/* header section work stop here  */
+
+/* primary button work is here  */
+
+.btn-primary{
+    color: dodgerblue;
+    background-color: white;
+    margin-top: 20px;
+    padding: 10px;
+    border: none;
+    font-size: 18px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+/* primary button work is stop  */
+
+/* year section work is start  */
+
+.year-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 120px 120px 70px 120px;
+}
+.year-container-img{
+    width: 100%;
+}
+.year-container-text{
+    margin-left: 50px;
+    margin-top: 130px;
+}
+.year-container-text h2{
+    font-size: 30px;
+    margin-bottom: 15px;
+}
+.year-container-text > p{
+    color: rgba(0, 0, 0, 0.726);
+    margin-bottom: 15px;
+    line-height: .5cm;
+}
+.year-container-text p i{
+    color: green;
+}
+
+/* plan section start  */
+
+.plans-tittle{
+    text-align: center;
+    font-size: 20px;
+}
+.plans-container{
+    display: flex;
+    justify-content: space-between;
+    margin: 40px 135px;
+}
+.single-item{
+    text-align: center;
+    padding: 15px;
+    transition: 0.5s;
+}
+.single-item:hover{
+    box-shadow: 3px 3px 10px gray;
+}
+.single-item img{
+    width: 80px;
+    height: 80px;
+}
+.single-item h2{
+    margin: 10px 0;
+}
+.single-item p{
+    color: rgba(0, 0, 0, 0.726);
+}
