--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@
     font-family: sans-serif;
 }
 header{
-    background-image: url(images/banner/banner3.png);
+    background-image: url(../images/banner/banner3.png);
     height: 100vh;
     background-repeat: no-repeat;
     background-position: center;
